# api-for-open-llm

./: .env  .env.example  .env.vllm.example  Dockerfile  LICENSE  README.md  README_OPENBAYES.md  SCRIPT.md  chatgpt.py  chatgpt_sse.py  chatlaw.py  constants.py  docker-compose-llama-cpp.yml  docker-compose.vllm.yml  docker-compose.yml  generate.py  load.py  main.py  requirements.txt
api/: app.py  app_base.py  common.py  config.py  embedding.py  finetune_server.py  generate.py  model_adapter.py  models.py  patches.py  prompt.py  prompt_adapter.py  protocol.py  react_prompt.py  router.py  server.py  start.py  utils.py  vllm_router.py  vllm_server.py
applications/: README.md  chat.py  doc_chat.py  requirements.txt  sql.py  table_info.csv  translate.py  web_demo.py
docker/: Dockerfile  Dockerfile.gptq  Dockerfile.llama.cpp  Dockerfile.tgi  Dockerfile.vllm
docs/: DISPLAY.md  FAQ.md  LLAMA_CPP.md  NEWS.md  RAG.md  RESOURCES.md  SCRIPT.md  VLLM_SCRIPT.md
examples/: email_sender.py  openai_api.py  quad_calculator.py  qwen_react_demo.py  react_prompt.py  request_test.py  sql_querier.py  tools.py
libs/langchain_llm/: README.md  pyproject.toml  test.py
libs/langchain_llm/langchain_llm/: __init__.py  _compat.py  _huggingface.py  _types.py  _vllm.py  utils.py
libs/langchain_llm/langchain_llm/adapters/: __init__.py  model.py  patcher.py  template.py
libs/langchain_llm/langchain_llm/generation/: __init__.py  baichuan.py  chatglm.py  qwen.py  stream.py  utils.py  xverse.py
llmtuner/: args.py  run_llama2_7b.sh  train_llama2.py  utils.py
prcode/: hf.py  minimonkey.py  (+2 more)
(+140 files in other folders)
